--- a/src/app/pages/check-out/check-out-create/check-out-create.component.html
+++ b/src/app/pages/check-out/check-out-create/check-out-create.component.html
@@ -1,8 +1,8 @@
 <section>
   <nb-card status="primary">
 
-    <nb-card-header>CheckList
-      <nb-badge text="Check-out" status="success" style="position: relative;"></nb-badge>
+    <nb-card-header>Registro
+      <nb-badge text="Salida" status="success" style="position: relative;"></nb-badge>
     </nb-card-header>
 
     <nb-card-body>
