--- a/src/app/pages/check-list/check-list-main/check-list-main.component.html
+++ b/src/app/pages/check-list/check-list-main/check-list-main.component.html
@@ -1,5 +1,5 @@
 <nb-card status="primary">
-  <nb-card-header>Check-In</nb-card-header>
+  <nb-card-header>Entrada</nb-card-header>
   <nb-card-body>
     <section>
       <div class="example-button-row">
