--- a/src/app/pages/check-out/check-out-main/check-out-main.component.html
+++ b/src/app/pages/check-out/check-out-main/check-out-main.component.html
@@ -1,5 +1,5 @@
 <nb-card status="primary">
-  <nb-card-header>Check Out</nb-card-header>
+  <nb-card-header>Salida</nb-card-header>
   <nb-card-body>
     <section>
       <div class="example-button-row">
