--- a/src/app/pages/tablero/tablero-main/tablero-main.component.html
+++ b/src/app/pages/tablero/tablero-main/tablero-main.component.html
@@ -69,7 +69,7 @@
       [showYAxisLabel]="showYAxisLabel"
       [showDataLabel]="showDataLabel"
       [xAxisLabel]="xAxisLabelP"
-      [yAxisLabel]="yAxisLabel"
+      [yAxisLabel]="yAxisLabelCantidadProducto"
       [legendTitle]="legendTitle">
       </ngx-charts-bar-vertical-2d>
       </nb-card-body>
