--- a/src/app/pages/check-list/check-list-pallet/check-list-pallet.component.html
+++ b/src/app/pages/check-list/check-list-pallet/check-list-pallet.component.html
@@ -127,7 +127,7 @@
               <div class="col-sm-3">
                 <div class="form-group">
                   <button nbButton hero shape="semi-round" size="small" status="warning" (click)="resetTemplate()">Limpiar</button>
-                  <button nbButton hero shape="semi-round" size="small" status="primary" [disabled]="temple()===true" [disabled]="status === 'close'">Generar</button>
+                  <button nbButton hero shape="semi-round" size="small" status="primary" [disabled]="temple()===true" [disabled]="checkList?.status === 'close'">Generar</button>
 
                 </div>
               </div>
@@ -307,6 +307,10 @@
                   <th mat-header-cell *matHeaderCellDef mat-sort-header > CANTIDAD </th>
                   <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
                 </ng-container>
+                <ng-container matColumnDef="amountStock">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header > STOCK </th>
+                  <td mat-cell *matCellDef="let element"> {{element.amountStock}} </td>
+                </ng-container>
                 <ng-container matColumnDef="um">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header > UM </th>
                   <td mat-cell *matCellDef="let element"> {{element.um.name}} </td>
@@ -326,18 +330,18 @@
                 <ng-container matColumnDef="actions">
                   <th mat-header-cell *matHeaderCellDef > ACCIONES </th>
                   <td mat-cell *matCellDef="let element">
-                    <button mat-icon-button color="primary" (click)="editDialog(element)" [disabled]="status === 'close'"><mat-icon>edit</mat-icon>
+                    <button mat-icon-button color="primary" (click)="editDialog(element)" [disabled]="checkList?.status === 'close'"><mat-icon>edit</mat-icon>
                     </button>
-                    <button mat-icon-button color="warn" (click)="deleteDialog(element)" [disabled]="status === 'close'">
+                    <button mat-icon-button color="warn" (click)="deleteDialog(element)" [disabled]="checkList?.status === 'close'">
                       <mat-icon>delete</mat-icon>
                     </button>
                   </td>
                 </ng-container>
 
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row [ngClass]="{'make-gold': row.checkOut !== null}" *matRowDef="let row; columns: displayedColumns;"></tr>
+                <tr mat-row [ngClass]="{'make-gold': row.amountStock == '0'}" *matRowDef="let row; columns: displayedColumns;"></tr>
 
-                <!-- Row shown when there is no matching data. -->
+                <!-- Row shown when there is no matching data.  -->
                 <tr class="mat-row" *matNoDataRow>
                 <td class="mat-cell" colspan="4">No se encontraron coincidencias "{{input.value}}"</td>
 
