--- a/src/app/pages/check-out/check-out-main/check-out-main.component.html
+++ b/src/app/pages/check-out/check-out-main/check-out-main.component.html
@@ -45,14 +45,14 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header >NO. SELLO </th>
             <td mat-cell *matCellDef="let element"> {{element.noSello}} </td>
           </ng-container>
-
-          <ng-container matColumnDef="pallets">
+          <!--           <ng-container matColumnDef="pallets">
             <th mat-header-cell *matHeaderCellDef > PALLETS </th>
             <td mat-cell *matCellDef="let element">
               <nb-badge text="Total {{element.pallets.length}}"   status="success"  style="position:static;">
               </nb-badge>
             </td>
           </ng-container>
+-->
 
           <ng-container matColumnDef="status">
             <th mat-header-cell *matHeaderCellDef> ESTATUS </th>
