--- a/src/app/pages/inventory/inventory-in/inventory-in.component.html
+++ b/src/app/pages/inventory/inventory-in/inventory-in.component.html
@@ -21,7 +21,12 @@
               </ng-container>
               <ng-container matColumnDef="remision">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header > REMISION </th>
-                <td mat-cell *matCellDef="let element"> {{element.checkList.remision}}  </td>
+                <td mat-cell *matCellDef="let element">
+                  <button nbButton hero shape="semi-round" size="tiny" status="primary"
+                  (click)="viewRemisionEntrada(element.checkList.id,element.checkList.status)">
+                  {{element.checkList.remision}}
+                  </button>
+                </td>
               </ng-container>
               <ng-container matColumnDef="transportLine">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header > TRANSPORTE </th>
@@ -51,22 +56,11 @@
                 <th mat-header-cell *matHeaderCellDef mat-sort-header > CADUCIDAD </th>
                 <td mat-cell *matCellDef="let element"> {{element.expiration}} </td>
               </ng-container>
-              <ng-container matColumnDef="out">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header > OUT </th>
-                <td mat-cell *matCellDef="let element">
-                  <button mat-icon-button color="primary" (click)="viewRemision(element.checkList.id, element.checkList.status)">
-                    <mat-icon nbTooltip="Agrega Pallets">library_add</mat-icon>
-                  </button>
-                </td>
-              </ng-container>
-
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
               <!-- Row shown when there is no matching data. -->
               <tr class="mat-row" *matNoDataRow>
               <td class="mat-cell" colspan="4">No se encontraron coincidencias "{{input.value}}"</td>
-
               </tr>
             </table>
           <!--Paginator -->
