--- a/src/app/pages/inventory/inventory-out/inventory-out.component.html
+++ b/src/app/pages/inventory/inventory-out/inventory-out.component.html
@@ -1,5 +1,5 @@
 <nb-card status="primary">
-  <nb-card-header>Pallets Disponibles</nb-card-header>
+  <nb-card-header>Pallets Liberados</nb-card-header>
   <nb-card-body>
       <section>
           <!-- filter -->
@@ -11,52 +11,63 @@
           <div class="mat-elevation-z8">
             <table mat-table *ngIf="dataSource" [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" >
 
+              <ng-container matColumnDef="remisionSalida">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header >REMISION SALIDA</th>
+                <td mat-cell *matCellDef="let element">
+
+                  <button nbButton hero shape="semi-round" size="tiny" status="success" (click)="viewRemisionSalida(element.checkOutDetail.id)">
+                    {{element.checkOutDetail.remision}}
+                  </button>
+                </td>
+              </ng-container>
+
+              <ng-container matColumnDef="remision">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header >REMISION ENTRADA</th>
+                <td mat-cell *matCellDef="let element">
+                  <button nbButton hero shape="semi-round" size="tiny" status="primary"
+                  (click)="viewRemisionEntrada(element.palletDetail.checkList.id,element.palletDetail.checkList.status)">
+                    {{element.palletDetail.checkList.remision}}
+                  </button>
+                  </td>
+              </ng-container>
+
+              <ng-container matColumnDef="transportLine">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>TRANSPORTE</th>
+                <td mat-cell *matCellDef="let element"> {{element.palletDetail.checkList.transportLine.name}}  </td>
+              </ng-container>
+
+              <ng-container matColumnDef="ua">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header >LICENCIA</th>
+                <td mat-cell *matCellDef="let element">{{element.palletDetail.ua}}</td>
+              </ng-container>
+
               <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header > PRODUCTO </th>
-                <td mat-cell *matCellDef="let element"> {{element.product.name}}  </td>
+                <td mat-cell *matCellDef="let element"> {{element.palletDetail.product.name}}  </td>
               </ng-container>
-              <ng-container matColumnDef="date">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header > DATE </th>
-                <td mat-cell *matCellDef="let element"> {{element.checkList.date}}  </td>
-              </ng-container>
-              <ng-container matColumnDef="remision">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header > REMISION </th>
-                <td mat-cell *matCellDef="let element"> {{element.checkList.remision}}  </td>
-              </ng-container>
-              <ng-container matColumnDef="transportLine">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header > TRANSPORTE </th>
-                <td mat-cell *matCellDef="let element"> {{element.checkList.transportLine.name}}  </td>
-              </ng-container>
+
               <ng-container matColumnDef="code">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header > CODIGO </th>
-                <td mat-cell *matCellDef="let element"> {{element.product.code}}  </td>
+                <td mat-cell *matCellDef="let element"> {{element.palletDetail.product.code}}  </td>
               </ng-container>
-              <ng-container matColumnDef="ua">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header > LINCENCIA</th>
-                <td mat-cell *matCellDef="let element"> {{element.ua}} </td>
-              </ng-container>
+
               <ng-container matColumnDef="amount">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header > CANTIDAD </th>
-                <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header > CANTIDAD LIBERADA </th>
+                <td mat-cell *matCellDef="let element">{{element.amount}}
+               </td>
+              </ng-container>
+
+              <ng-container matColumnDef="stock">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header > STOCK INICAL </th>
+                <td mat-cell *matCellDef="let element"> {{element.palletDetail.amount}} </td>
               </ng-container>
               <ng-container matColumnDef="um">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header > UM </th>
-                <td mat-cell *matCellDef="let element"> {{element.um.name}} </td>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header > UNIDAD </th>
+                <td mat-cell *matCellDef="let element"> {{element.palletDetail.um.name}} </td>
               </ng-container>
               <ng-container matColumnDef="lote">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header >LOTE</th>
-                <td mat-cell *matCellDef="let element"> {{element.lote}} </td>
-              </ng-container>
-              <ng-container matColumnDef="expiration">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header > CADUCIDAD </th>
-                <td mat-cell *matCellDef="let element"> {{element.expiration}} </td>
-              </ng-container>
-              <ng-container matColumnDef="out">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header > OUT </th>
-                <td mat-cell *matCellDef="let element">
-                  <button nbButton  hero shape="semi-round" size="tiny" status="primary"
-                  (click)="viewRemision(element.checkOut.id)" >{{element.checkOut.remision}}</button>
-                </td>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header > LOTE </th>
+                <td mat-cell *matCellDef="let element"> {{element.palletDetail.lote}} </td>
               </ng-container>
 
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -79,3 +90,5 @@
       </section>
   </nb-card-body>
 </nb-card>
+
+
