--- a/src/app/pages/check-out/check-out-create/check-out-create.component.html
+++ b/src/app/pages/check-out/check-out-create/check-out-create.component.html
@@ -240,7 +240,7 @@
                   (optionSelected)="optionSelectedSurveillance($event.option.value)"
                   [displayWith]="displayPropertySurveillance">
                   <mat-option *ngFor="let option of filteredSurveillances | async" [value]="option">
-                      {{option.firstName}} {{option.lastName}}
+                    {{option.firstName}} {{option.additionalName}} {{option.firstName}} {{option.secondName}}
                   </mat-option>
                   </mat-autocomplete>
                   <mat-error *ngIf="submitted && f2.surveillance.errors" >Campo Requerido</mat-error>
@@ -264,7 +264,7 @@
                   (optionSelected)="optionSelectedUser($event.option.value)"
                   [displayWith]="displayPropertyUser">
                   <mat-option *ngFor="let option of filteredResponsibles | async" [value]="option">
-                    {{option.firstName}} {{option.lastName}}
+                    {{option.firstName}} {{option.additionalName}} {{option.firstName}} {{option.secondName}}
                   </mat-option>
                   </mat-autocomplete>
                   <mat-error *ngIf="submitted && f2.responsible.errors" >Campo Requerido</mat-error>
