--- a/src/app/pages/check-out/check-out-pallet-test/check-out-pallet-test.component.html
+++ b/src/app/pages/check-out/check-out-pallet-test/check-out-pallet-test.component.html
@@ -1,7 +1,7 @@
 
 <section>
   <mat-stepper>
-    <mat-step label="Step 1" state="phone">
+    <mat-step label="Pallets Disponibles" state="phone">
       <!--Init buscador-->
       <form [formGroup]="searchForm" (ngSubmit)="onSubmit()">
         <mat-dialog-content>
@@ -224,7 +224,7 @@
       </section>
     </mat-step>
 
-    <mat-step label="Step 2" state="chat">
+    <mat-step label="Agrega Pallets" state="chat">
 
       <div *ngIf="attachmentArP.length>0">
         <form [formGroup]="detailForm" (ngSubmit)="onSubmitDetail()">
@@ -268,7 +268,7 @@
                 <mat-form-field appearance="legacy">
                   <mat-label>Stock * Tarima</mat-label>
                   <input matInput  formControlName="amount">
-                  <mat-hint>Stock: {{creds.controls.amount.value}}</mat-hint>
+
                   <mat-error *ngIf="creds.controls.amount.errors?.numeric">Valor numerico  </mat-error>
                   <mat-error *ngIf="creds.controls.amount.errors?.maxNumber">La cantidad supera al stock</mat-error>
                   <mat-error *ngIf="creds.controls.amount.errors?.required">Valor Requerido</mat-error>
@@ -308,28 +308,27 @@
           <br>
             </div>
             <!-- end grid-->
-              <div>
-                <button nbButton type="submit" hero shape="semi-round" size="small" status="primary">Guardar</button>
+              <div class="row">
+                <div class="col-sm-10"></div>
+                <div class="col-sm-2">
+                  <button nbButton type="submit" hero shape="semi-round" size="small" status="primary">Guardar</button>
+                </div>
               </div>
+
             </nb-card-body>
             </nb-card>
           </form>
       </div>
       <div>
-        <button type="button" nbButton matStepperPrevious hero shape="semi-round" size="small" status="warning"  (click)="limpiarDeatail()">Siguiente</button>
-        <button type="button" nbButton matStepperNext hero shape="semi-round" size="small" status="primary">Guardar</button>
+        <button type="button" nbButton matStepperPrevious hero shape="semi-round" size="small" status="warning"  (click)="limpiarDeatail()">Regresar</button>
+        <button type="button" *ngIf="totalRegistrosRegistered>0" nbButton matStepperNext hero shape="semi-round" size="small" status="primary">Siguiente</button>
       </div>
 
     </mat-step>
-    <mat-step label="Step 3">
+    <mat-step label="Pallets Registrados">
       <nb-card status="primary">
         <nb-card-header>Pallets Registrados</nb-card-header>
         <nb-card-body>
-          <section *ngIf="selection.selected.length>0">
-            <div class="example-button-row">
-              <button nbButton  hero shape="semi-round" size="small" status="primary"  (click)="save()" >Agregar {{selection.selected.length}}</button>
-            </div>
-          </section>
             <section>
                 <!-- filter -->
                 <mat-form-field appearance="standard">
