:coffin: remove code

--- a/src/app/pages/transport-types/transport-type-capacity/transport-type-capacity.component.html
+++ b/src/app/pages/transport-types/transport-type-capacity/transport-type-capacity.component.html
@@ -1,6 +1,6 @@
 <nb-card status="primary">
   <nb-card-header>Capicidades de transporte
-    <nb-badge text={{transportType.name}} status="danger" style="position: relative;"></nb-badge>
+    <nb-badge text={{transportType?.name}} status="danger" style="position: relative;"></nb-badge>
   </nb-card-header>
 
   <nb-card-body>
