--- a/src/app/pages/check-list/check-list-main/check-list-main.component.html
+++ b/src/app/pages/check-list/check-list-main/check-list-main.component.html
@@ -53,16 +53,14 @@
       <ng-container matColumnDef="stock">
         <th mat-header-cell *matHeaderCellDef mat-sort-header >STOCK</th>
         <td mat-cell *matCellDef="let element">
-          <nb-badge text="{{element.stock}} / {{element.stockRegistered}}"  status="primary" size="medium" style="position:static;" *ngIf="element.stock !=null" ></nb-badge>
-
-          <nb-badge text="N/A" status="warning"  size="medium" style="position:static;" *ngIf="element.stock ===null"></nb-badge>
+          <nb-badge text="{{element.calculateStock}} / {{element.calculateTotal}}"  status="primary" size="medium" style="position:static;"></nb-badge>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="pallets">
         <th mat-header-cell *matHeaderCellDef >PALLETS</th>
         <td mat-cell *matCellDef="let element">
-          <nb-badge text="Total {{element.pallets.length}}"   status="success"  style="position:static;">
+          <nb-badge text="Total {{element.totalCheckList}}"   status="success"  style="position:static;">
           </nb-badge>
 
         </td>
