--- a/src/app/pages/clients/client-main/client-main.component.html
+++ b/src/app/pages/clients/client-main/client-main.component.html
@@ -15,7 +15,7 @@
       </mat-form-field>
   </section>
 
-  <div class="mat-elevation-z8">
+  <div class="mat-elevation-z8" *ngIf="dataSource">
     <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" >
 
       <!-- Name Column -->
@@ -33,6 +33,13 @@
 
         </td>
       </ng-container>
+            <!-- Address Column -->
+      <ng-container matColumnDef="attention">
+        <th mat-header-cell *matHeaderCellDef  mat-sort-header> ATENCIÓN </th>
+          <td mat-cell *matCellDef="let element">
+            {{element.address.attention}}
+          </td>
+        </ng-container>
       <!-- isActive Column -->
       <ng-container matColumnDef="isActive">
         <th mat-header-cell *matHeaderCellDef> ESTATUS </th>
