--- a/src/app/pages/check-list/check-list-main/check-list-main.component.html
+++ b/src/app/pages/check-list/check-list-main/check-list-main.component.html
@@ -1,4 +1,7 @@
-<nb-card status="primary">
+<nb-card status="primary"  [nbSpinner]="loading"
+nbSpinnerStatus="primary"
+nbSpinnerSize="large"
+nbSpinnerMessage="Cargando ...">
   <nb-card-header>Entrada</nb-card-header>
   <nb-card-body>
     <section>
@@ -71,6 +74,7 @@
         <td mat-cell *matCellDef="let element">
           <nb-badge text="open" status="warning" style="position:static;" *ngIf="element.status ==='open'"></nb-badge>
           <nb-badge text="closed" status="primary"  style="position:static;" *ngIf="element.status ==='close'"></nb-badge>
+          <nb-badge text="closed-system" status="danger"  style="position:static;" *ngIf="element.status ==='close-sys'"></nb-badge>
         </td>
       </ng-container>
 
@@ -80,9 +84,12 @@
           <button mat-icon-button color="primary" (click)="addPallet(element)">
             <mat-icon nbTooltip="Agrega Pallets">library_add</mat-icon>
           </button>
-          <button mat-icon-button [disabled]="element.status === 'close'" color="primary" (click)="closeRemision(element)">
+          <button *ngIf="!isSuper" mat-icon-button [disabled]="element.status === 'close' || element.status === 'close-sys'" color="primary" (click)="closeRemision(element)">
             <mat-icon nbTooltip="Cerrar Remisión">done_outline</mat-icon>
-            </button>
+          </button>
+          <button *ngIf="isSuper" mat-icon-button [disabled]="element.status === 'close'" color="primary" (click)="closeRemision(element)">
+            <mat-icon nbTooltip="Cerrar Remisión">done_outline</mat-icon>
+          </button>
             <button mat-icon-button color="primary" (click)="editarClient(element)">
               <mat-icon nbTooltip="Editar Remisión">edit</mat-icon>
             </button>
