--- a/src/app/pages/check-out/check-out-pallet-test/check-out-pallet-test.component.html
+++ b/src/app/pages/check-out/check-out-pallet-test/check-out-pallet-test.component.html
@@ -307,25 +307,19 @@
 
           <br>
             </div>
-            <!-- end grid-->
-              <div class="row">
-                <div class="col-sm-10"></div>
-                <div class="col-sm-2">
-                  <button nbButton type="submit" hero shape="semi-round" size="small" status="primary">Guardar</button>
-                </div>
-              </div>
-
             </nb-card-body>
             </nb-card>
-          </form>
-      </div>
+
+
       <div>
         <button type="button" nbButton matStepperPrevious hero shape="semi-round" size="small" status="warning"  (click)="limpiarDeatail()">Regresar</button>
-        <button type="button" *ngIf="totalRegistrosRegistered>0" nbButton matStepperNext hero shape="semi-round" size="small" status="primary">Siguiente</button>
+        <button type="submit" nbButton  hero shape="semi-round" size="small" status="primary">Guardar</button>
       </div>
-
+    </form>
+    </div>
     </mat-step>
-    <mat-step label="Pallets Registrados">
+
+    <mat-step *ngIf="isSuper" label="Pallets Registrados">
       <nb-card status="primary">
         <nb-card-header>Pallets Registrados</nb-card-header>
         <nb-card-body>
@@ -339,54 +333,63 @@
                 <div class="mat-elevation-z8">
                   <table mat-table *ngIf="dataSourceRegistered" [dataSource]="dataSourceRegistered" matSort (matSortChange)="sortDataRegisted($event)" >
 
+                    <ng-container matColumnDef="remisionSalida">
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header >REMISION SALIDA</th>
+                      <td mat-cell *matCellDef="let element">
+                          {{element.checkOutDetail.remision}}
+                      </td>
+                    </ng-container>
+
                     <ng-container matColumnDef="remision">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header >REMISION</th>
-                      <td mat-cell *matCellDef="let element">{{element.checkList.remision}}</td>
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header >REMISION ENTRADA</th>
+                      <td mat-cell *matCellDef="let element">
+                          {{element.palletDetail.checkList.remision}}
+                        </td>
                     </ng-container>
 
                     <ng-container matColumnDef="transportLine">
                       <th mat-header-cell *matHeaderCellDef mat-sort-header>TRANSPORTE</th>
-                      <td mat-cell *matCellDef="let element"> {{element.checkList.transportLine.name}}  </td>
+                      <td mat-cell *matCellDef="let element"> {{element.palletDetail.checkList.transportLine.name}}  </td>
                     </ng-container>
 
                     <ng-container matColumnDef="ua">
                       <th mat-header-cell *matHeaderCellDef mat-sort-header >LICENCIA</th>
-                      <td mat-cell *matCellDef="let element">{{element.ua}}</td>
+                      <td mat-cell *matCellDef="let element">{{element.palletDetail.ua}}</td>
                     </ng-container>
 
                     <ng-container matColumnDef="name">
                       <th mat-header-cell *matHeaderCellDef mat-sort-header > PRODUCTO </th>
-                      <td mat-cell *matCellDef="let element"> {{element.product.name}}  </td>
+                      <td mat-cell *matCellDef="let element"> {{element.palletDetail.product.name}}  </td>
                     </ng-container>
 
                     <ng-container matColumnDef="code">
                       <th mat-header-cell *matHeaderCellDef mat-sort-header > CODIGO </th>
-                      <td mat-cell *matCellDef="let element"> {{element.product.code}}  </td>
+                      <td mat-cell *matCellDef="let element"> {{element.palletDetail.product.code}}  </td>
                     </ng-container>
 
                     <ng-container matColumnDef="amount">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header > CANTIDAD </th>
-                      <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header > CANTIDAD LIBERADA </th>
+                      <td mat-cell *matCellDef="let element">{{element.amount}}
+                     </td>
                     </ng-container>
 
-
                     <ng-container matColumnDef="stock">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header > STOCK </th>
-                      <td mat-cell *matCellDef="let element"> {{element.amountStock}} </td>
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header > STOCK INICAL </th>
+                      <td mat-cell *matCellDef="let element"> {{element.palletDetail.amount}} </td>
                     </ng-container>
                     <ng-container matColumnDef="um">
                       <th mat-header-cell *matHeaderCellDef mat-sort-header > UNIDAD </th>
-                      <td mat-cell *matCellDef="let element"> {{element.um.name}} </td>
+                      <td mat-cell *matCellDef="let element"> {{element.palletDetail.um.name}} </td>
                     </ng-container>
                     <ng-container matColumnDef="lote">
                       <th mat-header-cell *matHeaderCellDef mat-sort-header > LOTE </th>
-                      <td mat-cell *matCellDef="let element"> {{element.lote}} </td>
+                      <td mat-cell *matCellDef="let element"> {{element.palletDetail.lote}} </td>
                     </ng-container>
 
                     <ng-container matColumnDef="actions">
                       <th mat-header-cell *matHeaderCellDef > ACCIONES </th>
                       <td mat-cell *matCellDef="let element">
-                        <button mat-icon-button color="primary" (click)="eliminarPallet(element.id,element.palletDetail.id)"><mat-icon>edit</mat-icon>
+                        <button *ngIf="isSuper" mat-icon-button color="warn" (click)="eliminarPallet(element.id,element.palletDetail.id)"><mat-icon>delete</mat-icon>
                         </button>
                       </td>
                     </ng-container>
@@ -413,7 +416,6 @@
         </nb-card-body>
       </nb-card>
     </mat-step>
-
     <!-- Icon overrides. -->
     <ng-template matStepperIcon="phone">
       <mat-icon>call_end</mat-icon>
