--- a/src/app/pages/product/product-main/product-main.component.html
+++ b/src/app/pages/product/product-main/product-main.component.html
@@ -1,4 +1,7 @@
-<nb-card status="primary">
+<nb-card status="primary" [nbSpinner]="loading"
+nbSpinnerStatus="primary"
+nbSpinnerSize="large"
+nbSpinnerMessage="Cargando ...">
   <nb-card-header>Productos</nb-card-header>
   <nb-card-body>
     <section>
