--- a/src/app/pages/transport-types/transport-type-capacity/transport-type-capacity.component.html
+++ b/src/app/pages/transport-types/transport-type-capacity/transport-type-capacity.component.html
@@ -1,4 +1,7 @@
-<nb-card status="primary">
+<nb-card status="primary" [nbSpinner]="loading"
+nbSpinnerStatus="primary"
+nbSpinnerSize="large"
+nbSpinnerMessage="Cargando ...">
   <nb-card-header>Capicidades de transporte
     <nb-badge text={{transportType?.name}} status="danger" style="position: relative;"></nb-badge>
   </nb-card-header>
