--- a/src/app/pages/inventory/inventory-in/inventory-in.component.html
+++ b/src/app/pages/inventory/inventory-in/inventory-in.component.html
@@ -1,4 +1,7 @@
-<nb-card status="primary">
+<nb-card status="primary" [nbSpinner]="loading"
+nbSpinnerStatus="primary"
+nbSpinnerSize="large"
+nbSpinnerMessage="Cargando ...">
   <nb-card-header>Pallets Disponibles</nb-card-header>
   <nb-card-body>
       <section>
