--- a/src/app/pages/professions/profession-main/profession-main.component.html
+++ b/src/app/pages/professions/profession-main/profession-main.component.html
@@ -1,6 +1,9 @@
 
 
-<nb-card status="primary">
+<nb-card status="primary" [nbSpinner]="loading"
+nbSpinnerStatus="primary"
+nbSpinnerSize="large"
+nbSpinnerMessage="Cargando ...">
   <nb-card-header>{{titulo}}</nb-card-header>
   <nb-card-body>
     <section>
@@ -37,7 +40,7 @@
 
         <!-- isActive Column -->
         <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef> actions </th>
+            <th mat-header-cell *matHeaderCellDef> ACCIONES </th>
             <td mat-cell *matCellDef="let element">
                 <button mat-icon-button color="primary" (click)="editarClient(element)">
                     <mat-icon>edit</mat-icon>
