--- a/src/app/pages/users/users-create/users-create.component.html
+++ b/src/app/pages/users/users-create/users-create.component.html
@@ -2,7 +2,7 @@
   <mat-dialog-content>
     <div class="row" style="position: relative;">
       <div class="col-md-12 col-lg-12 col-xxxl-12" style="position: relative;">
-        <nb-card status="primary"   [nbSpinner]="loading"
+        <nb-card status="primary"   [nbSpinner]="loadingCreate"
         nbSpinnerStatus="primary"
         nbSpinnerSize="large"
         nbSpinnerMessage="Cargando ...">
@@ -162,7 +162,7 @@
       <button nbButton hero shape="semi-round" size="small" status="danger"
         [mat-dialog-close]="false" >Cancelar</button>
 
-      <button [disabled]="loading" nbButton  hero shape="semi-round" size="small" status="primary"
+      <button [disabled]="loadingCreate" nbButton  hero shape="semi-round" size="small" status="primary"
        cdkFocusInitial style="float: left;">{{actionBtn}}</button>
 
   </mat-dialog-actions>
