--- a/src/app/pages/cotizaciones/cotizaciones-main/cotizaciones-main.component.html
+++ b/src/app/pages/cotizaciones/cotizaciones-main/cotizaciones-main.component.html
@@ -15,35 +15,34 @@
                     The actual rendered columns are set as a property on the row definition" -->
 
               <!-- Position Column -->
-              <ng-container matColumnDef="id">
-                <th mat-header-cell *matHeaderCellDef> ID </th>
-                <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-              </ng-container>
 
               <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef> Nombre </th>
+                <th mat-header-cell *matHeaderCellDef> NOMBRE  </th>
                 <td mat-cell *matCellDef="let element"> {{element.name}} </td>
               </ng-container>
               <!-- Name Column -->
               <ng-container matColumnDef="email">
-                <th mat-header-cell *matHeaderCellDef> Email </th>
+                <th mat-header-cell *matHeaderCellDef> CORREO ELECTRONICO </th>
                 <td mat-cell *matCellDef="let element"> {{element.email}} </td>
               </ng-container>
 
               <!-- Weight Column -->
               <ng-container matColumnDef="phone">
-                <th mat-header-cell *matHeaderCellDef> Télefono </th>
-                <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
+                <th mat-header-cell *matHeaderCellDef> TÉLEFONO </th>
+                <td mat-cell *matCellDef="let element">
+                  <nb-badge  status="primary" style="position:static;"  text= {{element.phone}} ></nb-badge>
+
+                  </td>
               </ng-container>
 
               <!-- Symbol Column -->
               <ng-container matColumnDef="message">
-                <th mat-header-cell *matHeaderCellDef> Mensaje </th>
+                <th mat-header-cell *matHeaderCellDef> MENSAJE  </th>
                 <td mat-cell *matCellDef="let element"> {{element.message}} </td>
               </ng-container>
 
               <ng-container matColumnDef="fecha">
-                <th mat-header-cell *matHeaderCellDef> Fecha </th>
+                <th mat-header-cell *matHeaderCellDef> FECHA  </th>
                 <td mat-cell *matCellDef="let element"> {{element.created_at | date: 'dd/MM/yyyy'}} </td>
               </ng-container>
 
