--- a/src/app/pages/check-list/check-list-main/check-list-main.component.html
+++ b/src/app/pages/check-list/check-list-main/check-list-main.component.html
@@ -23,22 +23,19 @@ nbSpinnerMessage="Cargando ...">
         <th mat-header-cell *matHeaderCellDef mat-sort-header >REMISION</th>
         <td mat-cell *matCellDef="let element"> {{element.remision}} </td>
       </ng-container>
-      <ng-container matColumnDef="#" class="make-gold">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header > # </th>
-        <td mat-cell *matCellDef="let element"> {{dataSource.filteredData.indexOf(element) +1}}  </td>
-      </ng-container>
+
       <ng-container matColumnDef="date">
         <th mat-header-cell *matHeaderCellDef mat-sort-header >FECHA</th>
         <td mat-cell *matCellDef="let element"> {{element.date}} </td>
       </ng-container>
 
       <ng-container matColumnDef="transportLine">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header >LINEA</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header >L. TRANSPORTE</th>
         <td mat-cell *matCellDef="let element"> {{element.transportLine.name}} </td>
       </ng-container>
 
       <ng-container matColumnDef="transportType">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>TIPO</th>
+        <th mat-header-cell *matHeaderCellDef >TIPO TRANSPORTE</th>
         <td mat-cell *matCellDef="let element">
           {{element.transportCapacity.transportType.name}}
           {{element.transportCapacity.capacity}}
@@ -54,7 +51,7 @@ nbSpinnerMessage="Cargando ...">
 
 
       <ng-container matColumnDef="stock">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header >STOCK</th>
+        <th mat-header-cell *matHeaderCellDef  >STOCK</th>
         <td mat-cell *matCellDef="let element">
           <nb-badge text="{{element.calculateStock}} / {{element.calculateTotal}}"  status="primary" size="medium" style="position:static;"></nb-badge>
         </td>
