--- a/src/app/pages/check-list/check-list-pallet/check-list-pallet.component.html
+++ b/src/app/pages/check-list/check-list-pallet/check-list-pallet.component.html
@@ -149,7 +149,7 @@
                 <div class="col-sm-2">
 
                     <mat-form-field appearance="legacy">
-                      <mat-label>Lincecia</mat-label>
+                      <mat-label>Licencia</mat-label>
                       <input matInput  formControlName="ua"
                       >
                       <mat-error *ngIf="creds.controls.ua.errors?.unique">Licencia Duplicada  </mat-error>
@@ -297,11 +297,11 @@
                   <td mat-cell *matCellDef="let element"> {{element.product.name}}  </td>
                 </ng-container>
                 <ng-container matColumnDef="code">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header > CODIGO </th>
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header > CÓDIGO </th>
                   <td mat-cell *matCellDef="let element"> {{element.product.code}}  </td>
                 </ng-container>
                 <ng-container matColumnDef="ua">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header > LINCENCIA</th>
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header > LICENCIA</th>
                   <td mat-cell *matCellDef="let element"> {{element.ua}} </td>
                 </ng-container>
                 <ng-container matColumnDef="amount">
