--- a/src/app/pages/inventory/inventory-in/inventory-in.component.html
+++ b/src/app/pages/inventory/inventory-in/inventory-in.component.html
@@ -40,7 +40,7 @@ nbSpinnerMessage="Cargando ...">
                 <td mat-cell *matCellDef="let element"> {{element.product.code}}  </td>
               </ng-container>
               <ng-container matColumnDef="ua">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header > LINCENCIA</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header > LICENCIA</th>
                 <td mat-cell *matCellDef="let element"> {{element.ua}} </td>
               </ng-container>
               <ng-container matColumnDef="amount">
