--- a/src/app/pages/users/users-create/users-create.component.html
+++ b/src/app/pages/users/users-create/users-create.component.html
@@ -101,7 +101,7 @@
                               <mat-label>Roles</mat-label>
                               <mat-select formControlName="roles" [compareWith]="compareObjects" multiple
                                   [(ngModel)]="selectedOptions">
-                                  <mat-option *ngFor="let role of roleList" [value]="role">{{role}}</mat-option>
+                                  <mat-option *ngFor="let role of roles" [value]="role">{{role}}</mat-option>
                               </mat-select>
                           </mat-form-field>
                       </div>
