--- a/src/app/pages/check-list/check-list-create/check-list-create.component.html
+++ b/src/app/pages/check-list/check-list-create/check-list-create.component.html
@@ -258,7 +258,7 @@
                   (optionSelected)="optionSelectedUser($event.option.value)"
                   [displayWith]="displayPropertyUser">
                   <mat-option *ngFor="let option of filteredResponsibles | async"  [value]="option">
-                    {{option.firstName}} {{option.additionalName}} {{option.firstName}} {{option.secondName}}
+                    {{option.firstName}} {{option.additionalName}} {{option.lastName}} {{option.secondName}}
                   </mat-option>
                   </mat-autocomplete>
                   <mat-error *ngIf="submitted && f2.responsible.errors" >Campo Requerido</mat-error>
