--- a/src/app/pages/check-list/check-list-pallet/check-list-pallet.component.html
+++ b/src/app/pages/check-list/check-list-pallet/check-list-pallet.component.html
@@ -145,99 +145,96 @@
             <nb-card-header>Agrega Pallets</nb-card-header>
             <nb-card-body>
             <div formArrayName="items" *ngFor="let creds of form.get('items')?.['controls']; let i = index">
-              <div class="row col-lg-12" [formGroupName]="i">
+              <div class="row col-sm-12" [formGroupName]="i">
                 <div class="col-sm-2">
 
-                    <mat-form-field appearance="legacy">
-                      <mat-label>Licencia</mat-label>
-                      <input matInput  formControlName="ua"
-                      >
-                      <mat-error *ngIf="creds.controls.ua.errors?.unique">Licencia Duplicada  </mat-error>
-                    </mat-form-field >
-
-                </div>
-                <div class="col-sm-2">
-                   <mat-form-field appearance="legacy">
-                      <mat-label>Cantidad * Tarima</mat-label>
-                      <input matInput  formControlName="amount">
-                      <mat-error *ngIf="creds.controls.amount.errors?.numeric">Valor numerico  </mat-error>
-                    </mat-form-field>
-                </div>
-                <div class="col-sm-1">
-                    <mat-form-field class="example-full-width" #field floatLabel="always" appearance="legacy" >
-                      <mat-label>UM</mat-label>
-                      <input type="text"
-                             placeholder="Selecciona UM"
-                             matInput
-                             formControlName="um"
-                             [matAutocomplete]="autoUM">
-                      <mat-autocomplete #autoUM="matAutocomplete"
-                      (optionSelected)="optionSelectedUMSave($event.option.value,i)"
-                      [displayWith]="displayPropertyUM">
-                        <mat-option *ngFor="let option of unities" [value]="option">
-                          {{option.name}}
-                        </mat-option>
-                      </mat-autocomplete>
-                    </mat-form-field>
-                </div>
-
-                <div class="col-sm-1">
-                    <mat-form-field appearance="legacy">
-                      <mat-label>lote</mat-label>
-                      <input matInput  formControlName="lote">
-                    </mat-form-field>
-                </div>
-
-                <div class="col-sm-2">
-                    <mat-form-field appearance="legacy">
-                      <mat-label>Caducidad</mat-label>
-                      <input matInput type="date"  formControlName="expiration">
-                    </mat-form-field>
-                </div>
-
-                <div class="col-sm-2">
-                    <mat-form-field  class="example-full-width" #field floatLabel="always" appearance="legacy"  >
-                      <mat-label>Producto</mat-label>
-                      <input type="text"
-                             [disabled]="disabledTemplate =='true'"
-                             placeholder="Selecciona Producto"
-                             matInput
-                             formControlName="producto"
-                             [matAutocomplete]="autoProducto">
-                      <mat-autocomplete #autoProducto="matAutocomplete"
-                      (optionSelected)="optionSelectedProductSave($event.option.value,i)"
-                      [displayWith]="displayPropertyProduct">
-                        <mat-option *ngFor="let option of products" [value]="option" [disabled]="disabledTemplate =='true'">
-                          {{option.name}}
-                        </mat-option>
-                      </mat-autocomplete>
-                    </mat-form-field>
-                </div>
-                <!--
-                <div class="col-sm-1">
-                    <mat-form-field appearance="legacy" hidden>
-                      <mat-label>Código</mat-label>
-                      <input matInput   formControlName="codigo">
-                    </mat-form-field>
-
-                </div>
-                -->
-
-                <div class="col-sm-1">
                   <mat-form-field appearance="legacy">
-                    <mat-label>Ubicacion</mat-label>
-                    <input matInput type="text"  formControlName="ubication">
+                    <mat-label>Licencia</mat-label>
+                    <input matInput  formControlName="ua"
+                    >
+                    <mat-error *ngIf="creds.controls.ua.errors?.unique">Licencia Duplicada  </mat-error>
+                  </mat-form-field >
+
+              </div>
+              <div class="col-sm-1">
+                 <mat-form-field appearance="legacy">
+                    <mat-label>Cantidad * Tarima</mat-label>
+                    <input matInput  formControlName="amount">
+                    <mat-error *ngIf="creds.controls.amount.errors?.numeric">Valor numerico  </mat-error>
+                  </mat-form-field>
+              </div>
+              <div class="col-sm-1">
+                  <mat-form-field class="example-full-width" #field floatLabel="always" appearance="legacy" >
+                    <mat-label>UM</mat-label>
+                    <input type="text"
+                           placeholder="Selecciona UM"
+                           matInput
+                           formControlName="um"
+                           [matAutocomplete]="autoUM">
+                    <mat-autocomplete #autoUM="matAutocomplete"
+                    (optionSelected)="optionSelectedUMSave($event.option.value,i)"
+                    [displayWith]="displayPropertyUM">
+                      <mat-option *ngFor="let option of unities" [value]="option">
+                        {{option.name}}
+                      </mat-option>
+                    </mat-autocomplete>
                   </mat-form-field>
               </div>
 
-                <div class="col-sm-1">
-                  <button mat-icon-button color="warn" (click)="deleteItem(i)">
-                    <mat-icon>delete</mat-icon>
-                  </button>
-                </div>
-
+              <div class="col-sm-2">
+                  <mat-form-field appearance="legacy">
+                    <mat-label>lote</mat-label>
+                    <input matInput  formControlName="lote">
+                  </mat-form-field>
               </div>
 
+              <div class="col-sm-2">
+                  <mat-form-field appearance="legacy">
+                    <mat-label>Caducidad</mat-label>
+                    <input matInput type="date"  formControlName="expiration">
+                  </mat-form-field>
+              </div>
+
+              <div class="col-sm-1">
+                <mat-form-field appearance="legacy">
+                  <mat-label>Juliana</mat-label>
+                  <input matInput formControlName="juliana">
+                </mat-form-field>
+            </div>
+
+              <div class="col-sm-2">
+                  <mat-form-field  class="example-full-width" #field floatLabel="always" appearance="legacy"  >
+                    <mat-label>Producto</mat-label>
+                    <input type="text"
+                           [disabled]="disabledTemplate =='true'"
+                           placeholder="Selecciona Producto"
+                           matInput
+                           formControlName="producto"
+                           [matAutocomplete]="autoProducto">
+                    <mat-autocomplete #autoProducto="matAutocomplete"
+                    (optionSelected)="optionSelectedProductSave($event.option.value,i)"
+                    [displayWith]="displayPropertyProduct">
+                      <mat-option *ngFor="let option of products" [value]="option" [disabled]="disabledTemplate =='true'">
+                        {{option.name}}
+                      </mat-option>
+                    </mat-autocomplete>
+                  </mat-form-field>
+              </div>
+
+              <div class="col-sm-1">
+                <mat-form-field appearance="legacy">
+                  <mat-label>Ubicacion</mat-label>
+                  <input matInput type="text"  formControlName="ubication">
+                </mat-form-field>
+            </div>
+
+
+              <button mat-icon-button color="warn" (click)="deleteItem(i)">
+                <mat-icon>delete</mat-icon>
+              </button>
+
+
+          </div>
               <mat-divider></mat-divider>
             </div>
 
@@ -288,7 +285,7 @@
             <!-- filter -->
 
             <!-- end filter -->
-            <div class="mat-elevation-z8">
+            <div class="mat-elevation-z12">
               <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" >
                 <!-- Name Column -->
 
@@ -319,6 +316,10 @@
                 <ng-container matColumnDef="lote">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header >LOTE</th>
                   <td mat-cell *matCellDef="let element"> {{element.lote}} </td>
+                </ng-container>
+                <ng-container matColumnDef="juliana">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header >JULIANA</th>
+                  <td mat-cell *matCellDef="let element"> {{element.juliana}} </td>
                 </ng-container>
                 <ng-container matColumnDef="expiration">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header > CADUCIDAD </th>
@@ -366,6 +367,32 @@
             </mat-paginator>
             <!--End Paginator -->
             </div>
+        </nb-card-body>
+      </nb-card>
+    </nb-accordion-item-body>
+
+  </nb-accordion-item>
+
+  <nb-accordion-item>
+    <nb-accordion-item-header>
+     Carga Excel
+    </nb-accordion-item-header>
+    <nb-accordion-item-body>
+      <nb-card accent="primary">
+        <nb-card-header>Selecciona Excel</nb-card-header>
+        <nb-card-body>
+
+          <form [formGroup]="formUploadPallet" enctype="multipart/form-data" (ngSubmit)="uSubmitForm()">
+            <div class="form-group">
+              <input formControlName="uFile" type="file" id="uFile" name="uFile" (change)="uploadFile($event)">
+            </div>
+            <div class="form-group">
+              <button nbButton  hero shape="semi-round" size="small" status="primary"
+              cdkFocusInitial style="float: left;">{{actionBtn}}</button>
+            </div>
+          </form>
+
+
         </nb-card-body>
       </nb-card>
     </nb-accordion-item-body>
